--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,75 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <link
+      rel="apple-touch-icon"
+      href="/assets/icons/apple-touch-icons/apple-touch-icon.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/assets/icons/apple-touch-icons/apple-touch-icon-57x57.png"
+      sizes="57x57"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/assets/icons/apple-touch-icons/apple-touch-icon-60x60.png"
+      sizes="60x60"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/assets/icons/apple-touch-icons/apple-touch-icon-72x72.png"
+      sizes="72x72"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/assets/icons/apple-touch-icons/apple-touch-icon-76x76.png"
+      sizes="76x76"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/assets/icons/apple-touch-icons/apple-touch-icon-114x114.png"
+      sizes="114x114"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/assets/icons/apple-touch-icons/apple-touch-icon-120x120.png"
+      sizes="120x120"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/assets/icons/apple-touch-icons/apple-touch-icon-128x128.png"
+      sizes="128x128"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/assets/icons/apple-touch-icons/apple-touch-icon-144x144.png"
+      sizes="144x144"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/assets/icons/apple-touch-icons/apple-touch-icon-152x152.png"
+      sizes="152x152"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/assets/icons/apple-touch-icons/apple-touch-icon-180x180.png"
+      sizes="180x180"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/assets/icons/apple-touch-icons/apple-touch-icon-precomposed.png"
+    />
+
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#1976d2" />
+    <meta name="theme-color" content="#2f3136" />
 
     <script src="https://kit.fontawesome.com/c073fc9ae6.js"></script>
   </head>
   <body>
     <app-root></app-root>
-    <noscript
-      >Please enable JavaScript to continue using this application.</noscript
-    >
+    <noscript>
+      Please enable JavaScript to continue using this application.
+    </noscript>
   </body>
 </html>
