--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,9 @@
     <script src="https://kit.fontawesome.com/c073fc9ae6.js"></script>
   </head>
   <body>
-    <app-root></app-root>
+    <div class="content">
+      <app-root></app-root>
+    </div>
     <noscript>
       Please enable JavaScript to continue using this application.
     </noscript>
