--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,11 @@
     />
 
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#2f3136" />
+    <meta name="theme-color" content="#6cdbeb" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
 
     <script src="https://kit.fontawesome.com/c073fc9ae6.js"></script>
   </head>
