--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,8 @@
     />
 
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#6cdbeb" />
+    <!-- <meta name="theme-color" content="#6cdbeb" /> -->
+    <meta name="theme-color" content="#426696" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
