--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,51 @@
       content="black-translucent"
     />
 
+    <!-- TAGS -->
+    <meta
+      name="keywords"
+      content="recipe, app, mario, elsnig, programario, food, meal, snack, cake, cakes, meals, delicious"
+    />
+    <meta
+      name="description"
+      content="Recipe4you is an app for creating, saving and sharing your best recipes. Food is important, food is delicious but cooking food is often scary and difficult - well, not anymore! Visit recipe4you.programario.at to see the most delicious recipes."
+    />
+    <meta name="subject" content="Recipes for you" />
+    <meta name="copyright" content="Programario" />
+    <meta name="language" content="DE" />
+    <meta name="language" content="EN" />
+    <meta name="robots" content="index,follow" />
+    <meta name="revised" content="2021" />
+    <meta name="abstract" content="" />
+    <meta name="topic" content="Recipes, cooking and food in general" />
+    <meta
+      name="summary"
+      content="Recipe4you is an app for creating, saving and sharing your best recipes. Food is important, food is delicious but cooking food is often scary and difficult - well, not anymore! Visit recipe4you.programario.at to see the most delicious recipes."
+    />
+    <meta name="author" content="Mario Elsnig, www.programario.at" />
+    <meta name="designer" content="Mario Elsnig, www.programario.at" />
+    <meta name="reply-to" content="mario.elsnig@gmail.com" />
+    <meta name="owner" content="Mario Elsnig, Programario" />
+    <meta name="url" content="https://recipe4you.programario.at" />
+    <meta name="identifier-URL" content="https://recipe4you.programario.at" />
+    <meta name="category" content="Recipes, cooking, food" />
+    <meta name="coverage" content="Worldwide" />
+    <meta name="distribution" content="Global" />
+    <meta name="rating" content="General" />
+    <meta http-equiv="Expires" content="0" />
+
+    <!-- OpenGraph TAGS -->
+    <meta name="og:title" content="Recipe4you" />
+    <meta name="og:type" content="article" />
+    <meta name="og:url" content="https://recipe4you.programario.at" />
+    <meta name="og:site_name" content="Recipe4you" />
+    <meta
+      name="og:description"
+      content="Recipe4you is an app for creating, saving and sharing your best recipes. Food is important, food is delicious but cooking food is often scary and difficult - well, not anymore! Visit recipe4you.programario.at to see the most delicious recipes."
+    />
+    <meta name="og:email" content="mario.elsnig@gmail.com" />
+    <meta name="og:country-name" content="Austria" />
+
     <script src="https://kit.fontawesome.com/c073fc9ae6.js"></script>
   </head>
   <body>
